<resources>
    <string name="app_name">Bank Sampah</string>
    <string name="email">Email</string>
    <string name="masuk">Masuk</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="login">Login</string>
    <string name="register">Daftar</string>
    <string name="username">Username</string>
    <string name="email_register">Email</string>
    <string name="password_register">Password</string>
    <string name="daftar_register">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk_login">Masuk</string>
    <string name="e_batrash">E-BaTrash</string>
    <string name="detail_info">Aplikasi E-BaTrash adalah solusi untuk menyelesaikan masalah sosial tentang kebersihan lingkungan.</string>
    <string name="text_info">Tukarkan sampah plastikmu sekarang!</string>
    <string name="location">Lokasi Anda</string>
    <string name="category">Menu Kategori</string>
    <string name="admin_login_btn">Admin</string>
    <string name="riwayat_penerimaan">Riwayat Penerimaan</string>
    <string name="riwayat">Riwayat</string>
    <string name="jenis_sampah">Jenis Sampah</string>
    <string name="jemput_sampah">Jemput Sampah</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="sisa_saldo">Saldo: Rp100.00</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="account_username">Giorno</string>
    <string name="app_logo">App Logo</string>
    <string name="pass_image">Pass Image</string>
    <string name="log_out_image">Log Out Image</string>
    <string name="about_image">About Image</string>
    <string name="arrow">To the next Layout</string>
    <string name="log_in_btn">Login</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="masukkan_password">Masukkan password</string>
    <string name="login_page">Login</string>
    <string name="app_name1">E - BaTrash</string>
    <string name="daftar_btn">Daftar</string>
    <string name="belum_punya_akun_1">Belum punya akun?</string>
    <string name="email_name">Email</string>
    <string name="password_name">Password</string>
    <string name="daftar_permintaan">Permintaan Jemput Sampah</string>
    <string name="nama_user">Nama</string>
    <string name="tanggal_sampah">Tanggal Pendaftaran</string>
    <string name="kategori_sampah">Kategori Sampah</string>
    <string name="berat_sampah">Berat Sampah</string>
    <string name="alamat_rumah">Alamat Rumah</string>
    <string name="riwayat_anda">Riwayat Anda</string>
    <string name="address">Alamat</string>
    <string name="aturan_form">Mohon isi data dibawah ini dengan benar</string>
    <string name="berat_kg">Berat (Kg)</string>
    <string name="contoh_berat">5 Kg</string>
    <string name="harga_per_kg">Harga (per Kg)</string>
    <string name="kategori_sampah_form">Kategori Sampah</string>
    <string name="contoh_harga">Rp. 1500/Kg</string>
    <string name="tanggal_penjemputan">Tanggal Penjemputan</string>
    <string name="isi_tanggal">Masukan tanggal</string>
    <string name="catatan_tambahan">Catatan Tambahan (Opsional)</string>
    <string name="isi_catatan">Masukan catatan tambahan anda</string>
    <string name="tbl_jemput">Jemput Sekarang</string>
    <string name="info_icon">info icon</string>
    <string name="drop_down_icon">drop down icon</string>
    <string name="tarik_saldo">Tarik Saldo</string>
    <string name="tarik_saldo_judul">Tarik Saldo</string>
    <string name="contoh_nominal">Masukan Jumlah Penarikan Anda</string>
    <string name="withdraw">Tarik Tunai</string>
    <string name="tarik_saldo_bar">Tarik Saldo</string>
    <string name="tanggal_pengambilan">Tanggal Pengambilan</string>
    <string name="kategori_sampah_item">Kategori Sampah</string>
    <string name="alamat_pengambilan">Alamat Pengambilan</string>
    <string name="belum_diterima">Belum diterima</string>
    <string name="terima">Terima</string>
    <string name="tolak">Tolak</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="batalkan">Batalkan</string>
    <string name="jenis_sampah_bar">Jenis Sampah</string>
    <string name="botol">Botol: </string>
    <string name="harga_botol">Rp 2.000</string>
    <string name="plastik_daun">Plastik Daun: </string>
    <string name="harga_plastik_botol">Rp 250</string>
    <string name="kertas_hvs">Kertas HVS: </string>
    <string name="harga_kertas_hvs">Rp 2.500</string>
    <string name="kertas_duplek">Kertas Duplek: </string>
    <string name="harga_kertas_duplek">Rp 500</string>
    <string name="kertas_buram">Kertas Buram: </string>
    <string name="harga_kertas_buram">Rp 1.000</string>
    <string name="gelas_aqua">Gelas Aqua: </string>
    <string name="harga_gelas_aqua">Rp 3.000</string>
    <string name="ale_ale">Ale-ale: </string>
    <string name="harga_ale_ale">Rp 1.000</string>
    <string name="no_riwayat">Oops, riwayat masih kosong!</string>
    <string name="saldo_anda">Saldo Anda :</string>
    <string name="riwayat_user">Riwayat Anda</string>
    <string name="about_page">About</string>
    <string name="app_version">Version Beta 0.1</string>
    <string name="user_splash">App User Splash</string>
    <string name="admin_splash">App Admin Splash</string>
    <string name="minta_tarik">Permintaan Tarik Saldo</string>
    <string name="kepanjangan_logo">(Elektronik Bawuran Trash)</string>
    <string name="produk_by">by Tim PPKO Hima Fisika FMIPA UNY</string>
    <string name="powered_by">Powered by</string>
    <string name="gambar_himafi">Logo Himafi</string>
    <string name="gambar_uny">Logo UNY</string>
    <string name="gambar_bantul">Logo Bantul</string>
    <string name="sisa_saldo_user">Sisa Saldo User:</string>
    <string name="tanggal_permintaan">Tanggal Permintaan Tarik Saldo</string>
    <string name="jumlah_penarikan">Jumlah Penarikan:</string>
    <string name="nomor">Nomor Telepon</string>
    <string name="chgNumber">Ganti Nomor Telepon</string>
    <string name="ganti_nmr_user">Ganti Nomor Telepon</string>
    <string name="input_nomor_telepon">Masukkan Nomor Telepon Baru Anda</string>
    <string name="btn_ganti_nomor">Ganti Nomor</string>
    <string name="pass_verif_layout">Masukkan Password Anda</string>
    <string name="verif_password">Verifikasi Password:</string>
    <string name="nomor_telepon_user">Nomor Telepon</string>
    <string name="nomor_telepon_profile">Nomor Telepon:</string>

    <string-array name="kategori_sampah">
        <item>Botol</item>
        <item>Plastik Daun</item>
        <item>Kertas HVS</item>
        <item>Kertas Duplek</item>
        <item>Kertas Buram</item>
        <item>Gelas Aqua</item>
        <item>Ale-ale</item>
    </string-array>
    <string-array name="harga_perkilo">
        <item>2000</item>
        <item>250</item>
        <item>2500</item>
        <item>500</item>
        <item>1000</item>
        <item>3000</item>
        <item>1000</item>
    </string-array>
</resources>